# pay-sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: acceptance.yml  bump-version.yml  ci.yml  dependabot-auto-merge.yml  dependabot-notify.yml  e2e.yml  release.yml
acceptance/python/: conftest.py  requirements.txt  test_flows.py
acceptance/typescript/: package-lock.json  package.json  test_flows.ts  tsconfig.json
ows-policy/: package-lock.json  package.json  tsconfig.json
ows-policy/src/: pay-policy.ts
ows-policy/tests/: test_policy.ts
python/: LICENSE  README.md  pyproject.toml  vulture_whitelist.py
python/fastapi/: README.md  pyproject.toml
python/fastapi/src/payskill_fastapi/: __init__.py  consumer.py  provider.py  types.py
python/fastapi/tests/: test_middleware.py
python/src/payskill/: __init__.py  auth.py  client.py  eip3009.py  errors.py  fetch.py  keychain.py  models.py  ows_signer.py  signer.py  wallet.py
python/tests/: test_auth_rejection.py  test_client.py  test_crypto.py  test_e2e.py  test_errors.py  test_fetch.py  test_keychain.py  test_ows_integration.py  test_ows_signer.py  test_signer.py  test_validation.py  test_wallet.py
typescript/: README.md  eslint.config.js  jsr.json  knip.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
typescript/express/: README.md  package-lock.json  package.json
typescript/express/src/: consumer.ts  index.ts  provider.ts  types.ts
typescript/express/tests/: test_middleware.ts
typescript/next/: README.md  package-lock.json  package.json
typescript/next/src/: consumer.ts  index.ts  provider.ts  types.ts
typescript/next/tests/: test_handlers.ts
typescript/src/: auth.ts  client.ts  eip3009.ts  errors.ts  fetch.ts  index.ts  keychain.ts  models.ts  ows-signer.ts  signer.ts  wallet.ts
typescript/tests/: test_auth_rejection.ts  test_crypto.ts  test_e2e.ts  test_errors.ts  test_keychain.ts  test_ows.ts  test_ows_integration.ts  test_ows_signer.ts  test_signer.ts  test_validation.ts  test_wallet.ts
