[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payskill-fastapi"
version = "0.1.0"
description = "FastAPI middleware for x402 payments -- consumer and provider"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{name = "Agent Payment Protocol Infrastructure Inc.", email = "hello@pay-skill.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pay-skill>=0.1.14",
    "fastapi>=0.100",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://pay-skill.com"
Repository = "https://github.com/pay-skill/pay-sdk"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "uvicorn>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/payskill_fastapi"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S"]
ignore = ["S101", "S603"]

[tool.ruff.lint.per-file-ignores]
# B008 is Depends() in default arg, which is FastAPI's canonical idiom.
"tests/**" = ["B008"]
"src/payskill_fastapi/provider.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "acceptance: acceptance tests with real wallet and facilitator",
]
